changed formatting of references in bibliography.bib
added "section =" entries to get roman font for journal sections,
ie Phyical Review B, and edited page numbers to read as eg 1821--8
instead of 1821-1828

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,7 +14,7 @@
 	volume = "93",
 	number = "3",
 	year = "2004",
-	pages = "036805--1--036805--4"
+	pages = "036805--1--4"
 }
 
 @Article{ shanealkane,
@@ -154,15 +154,16 @@
 
 @Article{ riss_meyer,
 	Author = "U V Riss and H D Meyer",
-	Title = "{Calculation Of Resoannce Energies And Widths Using The Complex Absorbing Potential Method}",
-	Journal = "{J. Phys. B}",
-	Year = "{1993}",
-	Volume = "{26}",
-	Number = "{23}",
-	Pages = "{4503--4536}",
-	Month = "{DEC 14}",
-	ISSN = "{0953-4075}",
-	Unique-ID = "{ISI:A1993MM76100021}"
+	Title = "Calculation Of Resoannce Energies And Widths Using The Complex Absorbing Potential Method",
+	Journal = "J. Phys. B",
+        section = "B",
+	Year = "1993",
+	Volume = "26",
+	Number = "23",
+	Pages = "4503--36",
+	Month = "DEC 14",
+	ISSN = "0953-4075",
+	Unique-ID = "ISI:A1993MM76100021"
 }
 
 @Article{ feshbach58,
@@ -327,7 +328,7 @@
 	Year = "{1989}",
 	Volume = "{162}",
 	Number = "{3}",
-	Pages = "{165--169}",
+	Pages = "{165--9}",
 	Month = "{OCT 13}",
 	ISSN = "{0009-2614}",
 	Unique-ID = "{ISI:A1989AX76500001}"
@@ -348,9 +349,10 @@
 	author = "I Yeriskin and S McDermott and R J Bartlett and G Fagas and J C Greer",
 	title = "Electronegativity and Electron Currents in Molecular Tunnel Junctions",
 	journal = "J. Phys. Chem. C",
+        section = {C},
 	volume = "114",
 	number = "48",
-	pages = "20564--20568",
+	pages = "20564--8",
 	year = "2010",
 	doi = "10.1021/jp104986k"
 }
@@ -362,7 +364,7 @@
      year = "1995",
     month = "aug",
    volume = "103",
-    pages = "1821-1828",
+    pages = "1821--8",
       doi = "10.1063/1.469756",
    adsurl = "http://adsabs.harvard.edu/abs/1995JChPh.103.1821G"
 }
@@ -386,7 +388,7 @@
 	journal = "Comp. Phys. Comm.",
 	volume = "131",
 	number = "1–2",
-	pages = "142 - 163",
+	pages = "142--63",
 	year = "2000",
 	note = "",
 	issn = "0010-4655",
@@ -960,18 +962,6 @@ doi = {DOI: 10.1016/S0009-2614(95)01276-1},
 	doi = "10.1063/1.462569"
 }
 
-@Article{ basis_sets83,
-	author = "P Fuentealba and H Stoll and L {von Szentpaly} and P Schwerdtfeger and H Preuss",
-	title = "On the reliability of semi-empirical pseudopotentials: simulation of Hartree-Fock and Dirac-Fock results",
-	journal = "Journal of Physics B: Atomic and Molecular Physics",
-	volume = "16",
-	number = "11",
-	pages = "L323",
-	url = "http://stacks.iop.org/0022-3700/16/i=11/a=001",
-	year = "1983",
-	abstract = "Semi-empirical pseudopotentials can be modified in a simple way so as to reproduce frozen-core Hartree-Fock or Dirac-Fock results, respectively. The influence of relativistic effects is quantitatively discussed (i) for (r n ) expectation values and dipole polarisabilities of group IA and IB atoms, and (ii) for the bond lengths of K 2 + and Cu 2 ."
-}
-
 @ARTICLE{tunnelfet,
 author={Qin Zhang and Wei Zhao and Seabaugh, A.},
 journal={Electron Device Letters, IEEE}, title={Low-subthreshold-swing tunnel transistors},
@@ -988,6 +978,7 @@ ISSN={0741-3106},}
   title = {Conserving  $GW$  scheme for nonequilibrium quantum transport in molecular contacts},
   author = {Thygesen, K S and Rubio, A },
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {77},
   number = {11},
   pages = {115333},
@@ -1104,7 +1095,7 @@ title = {Amine-Gold Linked Single-Molecule Circuits: Experiment and Theory},
 journal = {Nano Lett.},
 volume = {7},
 number = {11},
-pages = {3477-3482},
+pages = {3477-82},
 year = {2007},
 doi = {10.1021/nl072058i},
 note ={PMID: 17900162},
@@ -1199,7 +1190,7 @@ year = {2000},
 journal = {J. Chem. Phys.},
 volume = {112},
 number = {5},
-pages = {2106-2110},
+pages = {2106--10},
 keywords = {iterative methods; eigenvalues and eigenfunctions; configuration interactions; autoionisation; predissociation; Auger effect},
 url = {http://link.aip.org/link/?JCP/112/2106/1},
 doi = {10.1063/1.480778}
@@ -1232,7 +1223,7 @@ title = "Stability conditions and nuclear rotations in the Hartree-Fock theory",
 journal = "Nucl. Phys.",
 volume = "21",
 number = "0",
-pages = "225 - 232",
+pages = "225--32",
 year = "1960",
 note = "",
 issn = "0029-5582",
@@ -1246,7 +1237,7 @@ author = {Nilius, N and Wallis, T M and Ho, W},
 title = {Development of One-Dimensional Band Structure in Artificial Gold Chains}, 
 volume = {297}, 
 number = {5588}, 
-pages = {1853-1856}, 
+pages = {1853--6}, 
 year = {2002}, 
 doi = {10.1126/science.1075242}, 
 URL = {http://www.sciencemag.org/content/297/5588/1853.abstract}, 
@@ -1318,7 +1309,7 @@ journal = {Science}
     journal = {Nature},
     keywords = {conductance, contacts, file-import-10-03-02, size},
     number = {6704},
-    pages = {783--785},
+    pages = {783--5},
     title = {{Formation and manipulation of a metallic wire of single gold atoms}},
     volume = {395},
     year = {1998}
@@ -1337,9 +1328,10 @@ journal = {Science}
   title = {Electron standing-wave formation in atomic wires},
   author = {Emberly, E G and Kirczenow, G},
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {60},
   issue = {8},
-  pages = {6028--6033},
+  pages = {6028--33},
   year = {1999},
   month = {Aug},
   doi = {10.1103/PhysRevB.60.6028},
@@ -1351,9 +1343,10 @@ journal = {Science}
   title = {Multiterminal molecular wire systems:   A self-consistent theory and computer simulations of charging and transport},
   author = {Emberly, E G and Kirczenow, G},
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {62},
   issue = {15},
-  pages = {10451--10458},
+  pages = {10451--8},
   year = {2000},
   month = {Oct},
   doi = {10.1103/PhysRevB.62.10451},
@@ -1403,7 +1396,7 @@ copyright="Strange and Thygesen; licensee Beilstein-Institut.",
   journal = {Phys. Rev.},
   volume = {139},
   issue = {3A},
-  pages = {A796--A823},
+  pages = {A796--823},
   year = {1965},
   month = {Aug},
   doi = {10.1103/PhysRev.139.A796},
@@ -1430,9 +1423,10 @@ copyright="Strange and Thygesen; licensee Beilstein-Institut.",
   title = {Resistance of atomic wires},
   author = {Lang, N D},
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {52},
   issue = {7},
-  pages = {5335--5342},
+  pages = {5335--42},
   year = {1995},
   month = {Aug},
   doi = {10.1103/PhysRevB.52.5335},
@@ -1444,6 +1438,7 @@ copyright="Strange and Thygesen; licensee Beilstein-Institut.",
   title = {Tunneling through nanosystems: Combining broadening with many-particle states},
   author = {Pedersen, J N and Wacker, A},
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {72},
   issue = {19},
   pages = {195330},
@@ -1474,6 +1469,7 @@ copyright="Strange and Thygesen; licensee Beilstein-Institut.",
   author={H Ness and L K Dash},
   title={Many-body current formula and current conservation for non-equilibrium fully interacting nanojunctions},
   journal={J. Phys. A},
+  section = {A},
   volume={45},
   number={19},
   pages={195301},
@@ -1498,6 +1494,7 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   title = {Calculation of self-energy matrices using complex absorbing potentials in electron transport calculations},
   author = {Driscoll, J A and Varga, K},
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {78},
   issue = {24},
   pages = {245118},
@@ -1513,6 +1510,7 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   author={P Fuentealba and H Stoll and L von Szentpaly and P Schwerdtfeger and H Preuss},
   title={On the reliability of semi-empirical pseudopotentials: simulation of Hartree-Fock and Dirac-Fock results},
   journal={J. Phys. B},
+  section = {B},
   volume={16},
   number={11},
   pages={L323},
@@ -1523,6 +1521,7 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   title = {Variational method with scattering boundary conditions imposed by the Wigner distribution},
   author = {Greer, J C},
   journal = {Phys. Rev. B},
+  section = {B},
   volume = {83},
   issue = {24},
   pages = {245413},
@@ -1540,7 +1539,7 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   journal = {Phys. Rev. Lett.},
   volume = {57},
   issue = {14},
-  pages = {1761--1764},
+  pages = {1761--4},
   year = {1986},
   month = {Oct},
   doi = {10.1103/PhysRevLett.57.1761},
