update figure 2 (transdat)

--- a/body.tex
+++ b/body.tex
@@ -269,9 +269,9 @@ interest which is the focus of our subsequent calculations.
 	\end{center}
 	\caption{Transmission through the chain junctions obtained in
 	         scattering calculations with a Green's functions formalism
-		 and with lead-molecule separations of 0.45 nm (top) and 0.40
-		 nm (bottom). The red curve is a transmission spectrum obtained
-		 using a conventional self-energy, the green curve is
+		 and with lead-molecule separations of 0.45 nm (a) and 0.40
+		 nm (b). The black curve is a transmission spectrum obtained
+		 using a conventional self-energy, the red curve is
 		 obtained using a \ac{CAP}.}
 	\label{fig:transdat}
 \end{figure}
