update figure 3 (13evals)

--- a/body.tex
+++ b/body.tex
@@ -318,8 +318,8 @@ within an accuracy required for our study.
 		\includegraphics[width=0.9\linewidth]{figures/figure3}
 	\end{center}
 	\caption{Comparison of transmission data obtained using a self-energy
-	(red) with Lorentzian broadened complex eigenvalues of $\um{H}_D + \um{W}$
-	(green) for a model system as described in~\sref{subsec:modelsystem},
+	(black) with Lorentzian broadened complex eigenvalues of $\um{H}_D + \um{W}$
+	(red) for a model system as described in~\sref{subsec:modelsystem},
 	with device-lead gap of 0.45 nm.
 	The inset shows a close-up view of the \ac{HOMO}, with the HF \ac{HOMO}
 	shown in blue for reference.
