rescale, relabel and recaption figure 7

--- a/body.tex
+++ b/body.tex
@@ -571,9 +571,9 @@ bracketed by the Koopmans and \dscf values.
 	\end{center}
 	\caption{LUMO region quasiparticle peaks of the 0.40 nm separated
 	         system, with excitations restricted to the `molecule' region,
-		 at different levels of theory: HF + self-energy (red),
-		 \dscf (green), and MCCI with threshold parameters of
-		 0.003 (blue) and 0.001 (magenta).}
+		 at different approximations: HF + self-energy (black),
+		 \dscf (red), and MCCI with threshold parameters of
+		 0.003 (blue) and 0.001 (green).}
 	\label{fig:all40Alumo}
 \end{figure}
 
