edit captions of figs 4-7 to discuss both parts (a) and (b).

--- a/body.tex
+++ b/body.tex
@@ -533,11 +533,12 @@ bracketed by the Koopmans and \dscf values.
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/figure4a_4b}
 	\end{center}
-	\caption{HOMO region quasiparticle peaks of the 0.45 nm separated
+	\caption{(a) HOMO region quasiparticle peaks of the 0.45 nm separated
 	         system, with excitations restricted to the `molecule' region,
 		 at different approximations: HF + self-energy (black),
 		 \dscf (red), and MCCI with threshold parameters of
-		 0.003 (blue) and 0.001 (green).}
+		 0.003 (blue) and 0.001 (green). (b) Density of states on the
+		 lead.}
 	\label{fig:all45Ahomo}
 \end{figure}
 
@@ -545,11 +546,12 @@ bracketed by the Koopmans and \dscf values.
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/figure5a_5b}
 	\end{center}
-	\caption{LUMO region quasiparticle peaks of the 0.45 nm separated
+	\caption{(a) LUMO region quasiparticle peaks of the 0.45 nm separated
 	         system, with excitations restricted to the `molecule' region,
 		 at different approximations: HF + self-energy (black),
 		 \dscf (red), and MCCI with threshold parameters of
-		 0.003 (blue) and 0.001 (green).}
+		 0.003 (blue) and 0.001 (green). (b) Density of states on the
+		 lead.}
 	\label{fig:all45Alumo}
 \end{figure}
 
@@ -557,11 +559,12 @@ bracketed by the Koopmans and \dscf values.
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/figure6a_6b}
 	\end{center}
-	\caption{HOMO region quasiparticle peaks of the 0.40 nm separated
+	\caption{(a) HOMO region quasiparticle peaks of the 0.40 nm separated
 	         system, with excitations restricted to the `molecule' region,
 		 at different approximations: HF + self-energy (black),
 		 \dscf (red), and MCCI with threshold parameters of
-		 0.003 (blue) and 0.001 (green).}
+		 0.003 (blue) and 0.001 (green). (b) Density of states on the
+		 lead.}
 	\label{fig:all40Ahomo}
 \end{figure}
 
@@ -569,11 +572,12 @@ bracketed by the Koopmans and \dscf values.
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/figure7a_7b}
 	\end{center}
-	\caption{LUMO region quasiparticle peaks of the 0.40 nm separated
+	\caption{(a) LUMO region quasiparticle peaks of the 0.40 nm separated
 	         system, with excitations restricted to the `molecule' region,
 		 at different approximations: HF + self-energy (black),
 		 \dscf (red), and MCCI with threshold parameters of
-		 0.003 (blue) and 0.001 (green).}
+		 0.003 (blue) and 0.001 (green). (b) Density of states on the
+		 lead.}
 	\label{fig:all40Alumo}
 \end{figure}
 
