rescale, relabel and recaption figure 8; accidentally update fig 5

--- a/body.tex
+++ b/body.tex
@@ -653,8 +653,8 @@ by approximately 1 eV.
 		\includegraphics[width=0.9\linewidth]{figures/figure8a_8c}
 	\end{center}
 	\caption{CI results with inclusion of lead excitations for the
-	         0.45 (top) and 0.40 nm (middle) systems, with the Density
-		 of States of the leads plotted below.}
+	         0.45 (a) and 0.40 nm (b) systems, with the density
+		 of states of the leads plotted in (c).}
 	\label{fig:cidevregion}
 \end{figure}
 
