rescale, relabel and recaption figure 9

--- a/body.tex
+++ b/body.tex
@@ -683,8 +683,7 @@ counterparts causes a different onset behavior.
 	\end{center}
 	\caption{Current versus voltage for the different transmission
 	         spectra discussed above, using the Landauer formula.
-		 Note that this is slightly artificial in this case, as
-		 the chain leads have a band gap. The equilibrium Fermi
+		 The equilibrium Fermi
 		 energy was chosen to lie in the middle of the band gap
 		 of the leads, at $-4.42$ eV, and as voltage is applied
 		 the electrochemical potentials on either side are taken
