various corrections and alterations

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -9,3 +9,4 @@
 \acrodef{IP}{ionization potential}
 \acrodef{EA}{electron affinity}
 \acrodef{LDA}{local density approximation}
+\acrodef{QP}{quasiparticle}
