minor changes to abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -7,7 +7,7 @@ Using a complex absorbing potential, we are able to reproduce the
 single-particle energy levels of the device region including a description
 of the effects of the ``semi-infinite'' leads.
 We then use the method of configuration interaction to explore the effect
-of correlations on the quasiparticle peaks.
+of correlations on the system's quasiparticle peaks.
 We find that when excitations on the leads are not included, the devices'
 \ac{HOMO} and \ac{LUMO} quasiparticle peaks when including correlation
 are bracketed by their respective values at the Hartree-Fock (Koopmans)
@@ -15,6 +15,6 @@ and \dscf level of theory.
 Increasing the coupling strength (by decreasing the molecule-lead
 separation) produces wider peaks, corresponding to shorter lifetimes.
 In contrast, including excitations on the leads has significant effects
-on the transmission (and hence the conducticity) of the device. The
-bracketing property no longer holds and both the position and the lifetimes
+on the transmission (and hence the conductivity) of the device. The
+bracketing property no longer holds and both the positions and the lifetimes
 of the quasiparticle levels shift significantly.
